--- a/css/public.css
+++ b/css/public.css
@@ -14,6 +14,6 @@ body,p,pre,ul,ol,li,form,a,table,dd,input,h1,h2,h3,h4,h5,h6{
 	list-style:none;
 }
 body{
-    background: #f5f6fa;
+    background: #eaeaea;
 }
-/*页脚*/
+
