--- a/pages/shujia/shujia.css
+++ b/pages/shujia/shujia.css
@@ -1,6 +1,14 @@
-body{
-    background:#eaeaea;
+.zlf_container{
+    width:7.02rem;
+    height:auto;
 }
-.container{
-    
+.zlf_find{
+    width:100%;
+    height:1.3rem;
+    display: flex;
 }
+.zlf_find_title{
+    font-size:0.24rem;
+    color: rgb( 136, 135, 135 );
+}
+
