--- a/css/public.css
+++ b/css/public.css
@@ -8,7 +8,7 @@ a{
 * img{
 	border:none;
 }
-body,p,pre,ul,ol,li,form,a,table,dd,input,h1,h2,h3,h4,h5,h6{
+body,p,pre,ul,ol,li,form,button,a,table,dd,input,h1,h2,h3,h4,h5,h6{
 	margin:0;
 	padding:0;
 	list-style:none;
