--- a/pages/show/show.css
+++ b/pages/show/show.css
@@ -181,6 +181,8 @@ html,body{width:100%;height:auto;background: #fafafa;}
 .lrc_xtbiao img{
 	display: block;
 	margin-left: .5rem;
+	width:.4rem;
+	height:.4rem;
 }
 .lrc_xtbiao p{
 	margin-left: .45rem;
