--- a/pages/login/yhp_loginland/yhp_login_land.css
+++ b/pages/login/yhp_loginland/yhp_login_land.css
@@ -12,5 +12,11 @@
 			background: blue;
 			margin: 0 auto;
 		}
+		.yhp_loginlandup{
+			width: 100%;
+			height: 2.58rem;
+			background: url("../../../images/yhp_images/yhp_loginup.png") no-repeat center bottom;
+			background-size: 4.11rem 2.36rem;
+		}
 	/*登录界面內宽结束*/
 /*登录界面最外框结束*/
