--- a/pages/friend/friend.css
+++ b/pages/friend/friend.css
@@ -23,8 +23,34 @@
     }
     .sy_fcaption{
     	width: 100%;height: 0.9rem;
-    	background: blue;
     }
+    .sy_sy-bt{
+        width:100%;
+        position:relative;
+    }
+    .sy_sy-bty{
+        color:#4b4c4c;
+        font-size: .24rem;
+        text-transform: uppercase;
+    }
+    .sy_su-div{
+        height: 0.5rem;
+    }
+    .sy_su-btt{
+        width:.6rem;
+        height:.5rem;
+        float: left;
+    }
+    .sy_sy-bth{
+        height: .5rem;
+        color:#333;
+        font-size: .34rem;
+        margin-left: 0.03rem;
+        line-height: .5rem;
+        display: block;
+        float: left;
+    }
+    
     .sy_news_content{
     	width: 100%;height: auto;
     	overflow: hidden;
@@ -93,7 +119,35 @@
   /*收藏*/
     .sy_fshare{
     	width: 2.1rem;height: 0.52rem;
-    	background: pink;
     	float: right;
     	margin: 0.1rem;
+    }
+    .ld_dizhi_rig{
+        float:right;
+        width:2.1rem;height:100%;
+    }
+    .ld_dizhi_rig li{
+        float:left;
+        width:50%;height:100%;
+    }
+    .ld_dizhi_rig span{
+        float:right;
+        display: block;
+        width:.37rem;height:100%;
+        margin-right:.08rem;
+    }
+    .ld_dizhi_icon1{
+        background:url(../../images/ld_images/ld_icon02.png) center center no-repeat;
+        background-size:100%;
+    }
+    .ld_dizhi_icon2{
+        background:url(../../images/ld_images/ld_icon01.png) center center no-repeat;
+        background-size:100%;
+    }
+    .ld_dizhi_num{
+        float:right;
+        height:100%;
+        line-height: .52rem;
+        font-size:.24rem;
+        color:#5a5a59;
     }
