--- a/pages/bookcover/shuji.css
+++ b/pages/bookcover/shuji.css
@@ -2,7 +2,7 @@
 /* @Author: guanlin
 * @Date:   2016-12-29 11:54:43
 * @Last Modified by:   Marte
-* @Last Modified time: 2016-12-30 08:50:43
+* @Last Modified time: 2016-12-30 11:37:52
 */
 .gl_bg{
     background: #EAEAEA;
@@ -26,6 +26,7 @@
     box-shadow: 0.005rem 0.00866rem 0.05rem 0 rgb( 204, 202, 202 );
     width: 2.29rem;
     height: 3.11rem;
+    overflow:hidden;
 }
 .gl_top_left img{
     width:100%;
@@ -304,5 +305,111 @@
   font-weight: bold;
   font-variant: small-caps;
   float:left;margin-left: 0.1rem;
+}
+.gl_tltjcon{
+     width:100%;
+     height:auto;
+     overflow:hidden;
+}
+.gl_tltjcon li{
+    width:100%;
+    height:1.75rem;
+    background:#fff;
+    border-radius: .05rem;
+    margin:0.08rem 0 .13rem 0; 
+    overflow:hidden;
+        text-align: left;
+}
+.gl_tl_nn{
+    width:6.72rem;
+    height:1.59rem;
+    margin:0.08rem auto;
+}
+.gl_nnleft{
+  border-width: 1px;
+  border-color: rgb( 223, 223, 223 );
+  border-style: solid;
+  box-shadow: 0.005rem 0.00866rem .05rem 0 rgb( 213, 211, 212 );
+  width: 1.29rem;
+  height: 1.56rem;
+  float:left;
+  overflow:hidden;
+}
+.gl_nnleft img{
+  height:100%;
+  width:auto;
+}
+.gl_nnright{
+    float:right;
+    width:5.1rem;
+    height:100%;
+}
+.gl_nntop{
+    width:calc(100% - 0.3rem);
+    height:0.7rem;overflow:hidden;
+    border-bottom: 1px dashed #d4d6d5;
+}
+.gl_nntop h1{
+  font-size: .34rem;
+  font-weight: normal;
+  color: rgb( 39, 40, 40 );
+  line-height: 1.059;
+  display:inline-block;
+}
+.gl_nntop h2{
+    display: inline-block;
+     color: green;
+     font-size: 0.3rem; 
+     background-image: -webkit-gradient(linear, 0 0, 0 bottom, from(rgba(170, 247, 103, 1)), to(rgba(126, 254, 218, 1)));
+     -webkit-background-clip: text;
+     -webkit-text-fill-color: transparent;
+}
+.gl_nntop img{
+      width: 42px;
+      height: 42px;
+      border-radius: 50%;
+      float:right;
+}
+.gl_nntop h3{
+  display:inline-block;
+  font-size: .24rem;
+  font-family: "SanFranciscoDisplay";
+  color: rgb( 157, 159, 159 );
+  line-height: 1.5;
+  -moz-transform: matrix( 1.00000003224249,0,0,1,0,0);
+  -webkit-transform: matrix( 1.00000003224249,0,0,1,0,0);
+  -ms-transform: matrix( 1.00000003224249,0,0,1,0,0);
+  float:right;
+  margin-right: 0.2rem;
+}
+.gl_star{
+    clear:both;
+    width:1.1rem;
+    height:.32rem;
+}
+.gl_star1{
+    width:.19rem;height:100%;
+    background:url(../../images/gl_images/star.png) no-repeat 0 0.06rem;
+    float:left;
+    background-size: .34rem .17rem;
+}
+.gl_nnbottom p{
+  font-size: .18rem;
+  color: rgb( 89, 90, 90 );
+  line-height: 2;
+}
+.gl_zz{
+    float:right;
+    width:0.4rem;height:.4rem;
+    background:url(../../images/gl_images/taoxin.png)no-repeat -.4rem;
+    background-size: .76rem .36rem;
+    margin:-.2rem 1.2rem 0 0;
+}
+.gl_plpl{
+    float:right;
+    width:0.4rem;height:.4rem;
+    background:url(../../images/gl_images/taoxin.png)no-repeat;
+    background-size: .76rem .36rem;
+    margin:-.2rem .2rem 0 0;
 }
 /*同类推荐结束*/
