--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -202,6 +202,8 @@ img{
     background:#fff;
     display:flex;
     justify-content: space-around;
+    position:fixed;
+    bottom:0;left:0;
 }
 .mjh-sy-tab a{
     display:block;
