--- a/pages/friend/friend.css
+++ b/pages/friend/friend.css
@@ -7,15 +7,21 @@
     	flex-wrap:wrap;
     	overflow: hidden;
     	position: relative;
+        background:red;
     }
-    /*.sy_pluul_box .sy_pluul{
+    .sy_pluul_box .swiper-wrapper{
+        width:100%;
+
+    }
+    .sy_pluul_box .sy_pluul{
     	width: 100%;height: 1.54rem;
+         background:blue;
     	display: flex;
     	justify-content:space-around;
-    	position: absolute;
-    	left: 0;top: 0;
-    	overflow: hidden;
-    }*/
+    	/*position: absolute;*/
+    	/*left: 0;top: 0;*/
+    	/*overflow: hidden;*/
+    }
     .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction{
         bottom: 0;
     }
