--- a/pages/person/person.css
+++ b/pages/person/person.css
@@ -65,53 +65,15 @@ body{
     	border:2px solid #fff;
     	border-radius: 50%;
     }
-  /*红心*/
-    .sy_heat{
-        width: 1.6rem;height: 0.8rem;
-        border-radius: 0.8rem;
-        border: 1px solid rgba(255,255,255,0.5);
-        background: rgba(0,0,0,0.5);
-        position: absolute;
-        top: 1.2rem;right: 0.2rem;
-        line-height: 0.8rem;
-    }
-    .sy_xin{
-        width: 0.4rem;height: 0.4rem;
-        margin: 0.2rem 0.1rem 0.2rem 0.25rem;
-        position: relative;
-        float: left;
-    }
-    .sy_xin img{
-        width: 100%;
-        position: absolute;
-        left: 0;top: 0;right: 0;bottom: 0;
-        margin: auto;
-    }
-    .sy_heat span{
-        font-size: 0.26rem;
-        color: #fff;
-    }
 /*换个签名吧*/
     .sy_qmbox{
-    	width: 100%;height: auto;
+    	width: 100%;height: 1rem;
         text-align: center;
         margin: 0.2rem 0;
     }
-    .sy_qmp{
-        height: 0.5rem;line-height: 0.5rem;
-    }
-    .sy_qmp span{
-        height: 0.5rem;
-        /*display: inline-block;*/
+    .sy_qmbox p{
     	font-size: 0.26rem;
         color:#333;
-    }
-    .sy_dist{
-        display: inline-block;
-        width: 0.5rem;height: 0.5rem;
-        background: red;
-        vertical-align: middle;
-        margin-top: -0.08rem;
     }
     .sy_xian_img{
     	width: 100%;height: 0.03rem;
@@ -131,7 +93,8 @@ body{
     	flex-wrap:wrap;
     }
     .sy_pluli{
-    	width: 3.33rem;height: 1.36rem;
+    	/*width: 3.33rem;*/
+        height: 1.36rem;
     	margin: 0.09rem;
     	box-shadow: 0 0 0.05rem #666;
     	border-radius: 0.05rem;
