--- a/pages/shequ/shequ.css
+++ b/pages/shequ/shequ.css
@@ -2,7 +2,7 @@
 * @Author: Marte
 * @Date:   2016-12-29 13:45:24
 * @Last Modified by:   Marte
-* @Last Modified time: 2016-12-30 23:43:17
+* @Last Modified time: 2017-01-02 15:25:40
 */
 /*社区顶部开始*/
 .ld_sqtopbar{
@@ -13,6 +13,9 @@
     display:flex;
     align-items: center;
     justify-content: space-between;
+    position:fixed;
+    left:0;top:0;
+    z-index: 100;
 }
 .ld_sq_photo{
     width:.76rem;height:.76rem;
@@ -85,7 +88,7 @@
 /*社区圈子开始*/
 .ld_qz_condi{
     width:100%;
-    padding:.44rem .24rem;
+    padding:1.32rem .24rem;
     padding-bottom:1rem;
     box-sizing: border-box;
 }
@@ -283,8 +286,12 @@ span.ld_sy_circle2{
     border-radius:50%;
     background:#f0f0f0;
     border:1px solid #d5d5d5;
-    color:#6f6f6f;
+    
     font-size:.22rem;
+}
+.ld_sy_num a{
+    display:block;
+    color:#6f6f6f;
 }
 .ld_sy_numactive{
     width:.73rem;height:.41rem;
@@ -293,6 +300,9 @@ span.ld_sy_circle2{
     background:#ff3469;
     color:#fff;
     border:0;
+}
+.ld_sy_numactive a{
+    color:#fff;
 }
 /*搜索*/
 .ld_sy_search{
