--- a/pages/shujia/shujia.css
+++ b/pages/shujia/shujia.css
@@ -1,17 +1,15 @@
 
 /*书架-发现*/
-.zlf_top{
-    height:.9rem;
-}
 .zlf_container{
     width:7.02rem;
     height:auto;
     margin:0 auto;
+    padding:.48rem 0 1rem 0;
 }
 .zlf_find{
     width:100%;
-    height:1.1rem;
-    padding:0.2rem 0;
+    /*height:1.1rem;*/
+    /*padding:0.2rem 0;*/
     text-align: center;
 }
 .zlf_find_title{
@@ -36,13 +34,13 @@
 }
 .zlf_cover{
     height:5rem;
-    width:7.02rem;
+    width:100%;
     border-radius: 0.03rem;
     overflow: hidden;
     position:relative;
 }
 .zlf_cover .zlf_book1{
-    width:7.02rem;
+    width:100%;
 }
 .zlf_photo{
     width:.8rem;
@@ -227,12 +225,13 @@
     bottom:-0.05rem;
 }
 .zlf_book_msg{
-    width:2.05rem;
+    width:100%;
     height:auto;
     padding:.1rem;
     background:#f4f4f4;
     line-height:.4rem;
     border-radius:0  0 .1rem .1rem;
+    box-sizing: border-box;
 }
 .zlf_book_name {
     height:.4rem;
@@ -246,6 +245,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow:hidden;
+    text-transform: uppercase;
 }
 .zlf_wjx{
     height:.4rem;
@@ -301,6 +301,7 @@
 }
 /*more  GO*/
 .zlf_close_box{
+    display:block;
     width:3.3rem;
     height:1.2rem;
     border-radius:.05rem;
