--- a/css/public.css
+++ b/css/public.css
@@ -16,4 +16,7 @@ body,p,pre,ul,ol,li,form,button,a,table,dd,input,h1,h2,h3,h4,h5,h6{
 body{
     background: #eaeaea;
 }
-
+.footer{
+    width:100%;height:1rem;
+    background:red;
+}
