--- a/pages/friend/friend.css
+++ b/pages/friend/friend.css
@@ -3,25 +3,23 @@
     	width: 7.02rem;height: 1.8rem;
     	margin: 0 auto;
     	display: flex;
-    	justify-content:space-around;
+    	justify-content:space-between;
     	flex-wrap:wrap;
     	overflow: hidden;
     	position: relative;
-        background:red;
     }
     .sy_pluul_box .swiper-wrapper{
         width:100%;
-
     }
-    .sy_pluul_box .sy_pluul{
-    	width: 100%;height: 1.54rem;
+    /* .sy_pluul_box .sy_pluul{
+        width: 100%;height: 1.54rem;
          background:blue;
-    	display: flex;
-    	justify-content:space-around;
-    	/*position: absolute;*/
-    	/*left: 0;top: 0;*/
-    	/*overflow: hidden;*/
-    }
+        display: flex;
+        justify-content:space-around;
+        position: absolute;
+        left: 0;top: 0;
+        overflow: hidden;
+    } */
     .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction{
         bottom: 0;
     }
