--- a/pages/me/me.css
+++ b/pages/me/me.css
@@ -14,6 +14,10 @@ body{
     .sy_fslide{
     	width: 1.1rem;height: 100%;
     }
+    .sy_fslide a{
+        display:block;
+        width:100%;height:100%;
+    }
     .sy_fslide:nth-child(1){
         background: url(../../images/sy_images/sy_backbtn.gif) no-repeat center;
     }
@@ -93,9 +97,7 @@ body{
     	flex-wrap:wrap;
     }
     .sy_pluli{
-    	/*width: 3.33rem;*/
         height: 1.36rem;
-    	margin: 0.09rem;
     	box-shadow: 0 0 0.05rem #666;
     	border-radius: 0.05rem;
     	overflow: hidden;
