--- a/pages/shujia/shujia.css
+++ b/pages/shujia/shujia.css
@@ -4,7 +4,7 @@
     width:7.02rem;
     height:auto;
     margin:0 auto;
-    padding:.48rem 0 1rem 0;
+    padding-top:1.2rem;
 }
 .zlf_find{
     width:100%;
@@ -27,7 +27,7 @@
     margin-top:.4rem;
 }
 .zlf_item{
-    width:100%;
+    width:7.02rem;
     height:auto;
     background:#fff;
     position:relative;
@@ -191,6 +191,7 @@
     justify-content: space-between;
 }
 .zlf_book_item{
+    display:block;
     width:2.25rem;
     height:auto;
     background:#fff;
