--- a/pages/show/show.css
+++ b/pages/show/show.css
@@ -1,4 +1,4 @@
-详情页开始*/
+/*详情页开始*/
 html,body{width:100%;height:auto;background: #fafafa;}
 *{box-sizing: border-box;}	
 /*顶部开始*/
@@ -73,7 +73,7 @@ html,body{width:100%;height:auto;background: #fafafa;}
 	height:auto;
 	background: #fff;
 	padding: .54rem .52rem .36rem .3rem;
-	border-radius: .4rem .4rem 0 0;
+	border-radius: .2rem .2rem 0 0;
 }
 .lrc_zimu{
 	text-transform: uppercase;
@@ -116,12 +116,20 @@ html,body{width:100%;height:auto;background: #fafafa;}
 .yi{background: #ee0758;}
 .er{background: #ee8407;}
 .san{background: #17ee07;}
-.lrc_diyid{margin-top:.4rem;
-	text-indent: .3rem;font-size: .24rem;
-	color: #737373;}
-.lrc_dierd{margin-top:.6rem;
-	text-indent: .3rem;font-size: .24rem;
-	color: #737373;}
+.lrc_diyid{
+	margin-top:.4rem;
+	text-indent: .5rem;
+	font-size: .24rem;
+	color: #737373;
+	text-align: justify;
+}
+.lrc_dierd{
+	margin-top:.6rem;
+	text-indent: .5rem;
+	font-size: .24rem;
+	color: #737373;
+	text-align: justify;
+}
 /*内容结束*/
 
 /*底部开始*/
