--- a/pages/friendqun/friendqun.css
+++ b/pages/friendqun/friendqun.css
@@ -2,5 +2,13 @@
 * @Author: Marte
 * @Date:   2017-01-03 00:58:18
 * @Last Modified by:   Marte
-* @Last Modified time: 2017-01-03 01:12:50
+* @Last Modified time: 2017-01-03 11:09:21
 */
+.ld_qundi{
+    width:100%;
+    padding:0 .24rem;
+    box-sizing: border-box;
+}
+.ld_friend{
+    width:100%;
+}
