--- a/pages/shujia/shujia.css
+++ b/pages/shujia/shujia.css
@@ -41,6 +41,7 @@
 }
 .zlf_cover .zlf_book1{
     width:100%;
+    height:100%;
 }
 .zlf_photo{
     width:.8rem;
@@ -204,8 +205,9 @@
 }
 .zlf_book img{
     width:2.05rem;
+    height:2.4rem;
     position:absolute;
-    top:-0.4rem;
+    top:-0.6rem;
     left:0.11rem;
 }
 .zlf_yuan{
