--- a/pages/login/login-mjh/login_mjh.css
+++ b/pages/login/login-mjh/login_mjh.css
@@ -182,7 +182,7 @@ body,html{width:7.5rem;height: 100%;overflow: hidden;}
   z-index: 777;
   display:flex;
   justify-content: center;
-  display:none;
+  /*display:none;*/
 }
 .mjh-dl-yhxz a{
     display:block;
